; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/stat/extr_stat.c_hex2byte.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/stat/extr_stat.c_hex2byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hex2byte(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = getelementptr inbounds i8, i8* %4, i64 0
  %6 = load i8, i8* %5, align 1
  %7 = call i64 @ishexnumber(i8 signext %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 1
  %12 = load i8, i8* %11, align 1
  %13 = call i64 @ishexnumber(i8 signext %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %9, %1
  store i32 -1, i32* %2, align 4
  br label %27

16:                                               ; preds = %9
  %17 = load i8*, i8** %3, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 0
  %19 = load i8, i8* %18, align 1
  %20 = call i32 @hex2nibble(i8 signext %19)
  %21 = shl i32 %20, 4
  %22 = load i8*, i8** %3, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 1
  %24 = load i8, i8* %23, align 1
  %25 = call i32 @hex2nibble(i8 signext %24)
  %26 = add nsw i32 %21, %25
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %16, %15
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i64 @ishexnumber(i8 signext) #1

declare dso_local i32 @hex2nibble(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
